UpdateProfileDataPrivileges